<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Segitiga">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:layout_width="108dp"
                android:layout_height="48dp"
                android:id="@+id/Hitung" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.304" tools:text="@string/Hitung"/>
        <Button
                android:text="@string/Share"
                android:layout_width="114dp"
                android:layout_height="48dp"
                android:id="@+id/share" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Hitung" app:layout_constraintHorizontal_bias="0.092"
                app:layout_constraintVertical_bias="0.23"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Alas"
                android:ems="10"
                android:id="@+id/Alas" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/Hitung" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintVertical_bias="0.416" android:textSize="24sp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Tinggi"
                android:ems="10"
                android:id="@+id/Tinggi" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/Hitung" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Alas" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintVertical_bias="0.327" android:textSize="24sp"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/luas" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Hitung" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/share" app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintVertical_bias="0.158" android:textSize="24sp"/>
        <TextView
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/keliling" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/share" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/luas" app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintVertical_bias="0.384" android:textSize="24sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>