<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Persegipanjang">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Panjang"
                android:ems="10"
                android:id="@+id/Panjang" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.164"
                app:layout_constraintVertical_bias="0.198" android:textSize="24sp" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Lebar"
                android:ems="10"
                android:id="@+id/Lebar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Panjang" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.164"
                app:layout_constraintVertical_bias="0.043" android:textSize="24sp"/>
        <Button
                android:text="@string/Hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hitung2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Lebar" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/luas2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/luas2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/hitung2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintVertical_bias="0.031" android:textSize="24sp"/>
        <TextView
                android:text="@string/keliling2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/keliling2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/luas2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintVertical_bias="0.009"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/share" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/keliling2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintVertical_bias="0.028"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>